# madrona_renderer

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml
data/: cube.mtl
scripts/: test.py
src/: CMakeLists.txt  args.cpp  args.hpp  bindings.cpp  consts.hpp  dump.cpp  dump.hpp  headless.cpp  mgr.cpp  mgr.hpp  sim.cpp  sim.hpp  sim.inl  types.hpp  viewer.cpp
